power commit: importing shell markup, sass and header images

--- a/src/styles/app.sass
+++ b/src/styles/app.sass
@@ -1,5 +1,10 @@
 /* Settings and dependencies */
 @import "public/vendor/sass-meyer-reset/sass-meyer-reset"
+@import "src/styles/vars"
+@import "src/styles/utils"
 
 /* Custom styles */
 @import "src/styles/main"
+@import "src/styles/header"
+@import "src/styles/sections"
+@import "src/styles/landing"
