--- a/src/styles/_main.sass
+++ b/src/styles/_main.sass
@@ -1,17 +1,33 @@
 html, body
   width: 100%
   height: 100%
+  overflow: hidden
 
 body
-  background-color: #131313
+  background-color: $white
+  font-family: $montserrat
+  font-weight: $regular
 
   -webkit-font-smoothing: antialiased
+  -webkit-tap-highlight-color: rgba(0,0,0,0)
   -webkit-text-size-adjust: none
 
-h1
-  margin: 20px
-  color: #666
-  font: bold normal normal 24px/24px 'helvetica neue', helvetica, sans-serif
+// ---------------------------------------------------
+// Wrapper
+// ---------------------------------------------------
 
-img
-  margin: 0 20px
+#wrapper
+  position: absolute
+  top: 0px
+  left: 0px
+  width: 100%
+  height: 100%
+  overflow: hidden
+
+#wrapper-inner
+  position: absolute
+  top: 0px
+  left: 40px
+  right: 40px
+  bottom: 0px
+  overflow: hidden
