--- a/src/styles/_main.sass
+++ b/src/styles/_main.sass
@@ -12,6 +12,10 @@ body
   -webkit-tap-highlight-color: rgba(0,0,0,0)
   -webkit-text-size-adjust: none
 
+a
+  text-decoration: none
+  outline: none
+
 // ---------------------------------------------------
 // Wrapper
 // ---------------------------------------------------
