vertical align styles for oldish browsers

--- a/src/styles/_utils.sass
+++ b/src/styles/_utils.sass
@@ -22,3 +22,14 @@
 
 .cf:after
   clear: both
+
+// Vertical align
+// for old'ish browsers
+.table
+  width: 100%
+  height: 100%
+  display: table
+
+.table-cell
+  vertical-align: middle
+  display: table-cell
