add basic fallback markup and styles

--- a/src/styles/app.sass
+++ b/src/styles/app.sass
@@ -5,6 +5,7 @@
 
 /* Custom styles */
 @import "src/styles/main"
+@import "src/styles/fallback"
 @import "src/styles/header"
 @import "src/styles/sections"
 @import "src/styles/landing"
