--- a/src/styles/app.sass
+++ b/src/styles/app.sass
@@ -7,5 +7,5 @@
 @import "src/styles/main"
 @import "src/styles/fallback"
 @import "src/styles/header"
-@import "src/styles/sections"
-@import "src/styles/landing"
+@import "src/styles/pages"
+@import "src/styles/transition"
