power commit: dynamically build nav, routes and mc's, and activate / suspend page controller

--- a/src/styles/_header.sass
+++ b/src/styles/_header.sass
@@ -44,6 +44,7 @@ header
       font-size: 14px
       line-height: 24px
       font-weight: $bold
+      text-transform: capitalize
       display: inline-block
       cursor: pointer
 
