pages sass structure

--- a/src/styles/_pages.sass
+++ b/src/styles/_pages.sass
@@ -7,31 +7,47 @@
   background-color: $light_gray
   overflow: hidden
 
-  #pages-inner
+#pages-inner
+  position: absolute
+  top: 0px
+  left: 0px
+  width: 100%
+  height: 100%
+
+.page
+  position: absolute
+  top: 0px
+  left: 0px
+  width: 100%
+  height: 100%
+  overflow: hidden
+  display: none
+
+  .page-inner
     position: absolute
     top: 0px
     left: 0px
     width: 100%
     height: 100%
+    overflow: hidden
 
-    .page
-      position: absolute
-      top: 0px
-      left: 0px
-      width: 100%
-      height: 100%
-      overflow: hidden
-      display: none
+// -----------------------------------------------
+// Home styles
+// -----------------------------------------------
 
-      .page-inner
-        position: absolute
-        top: 0px
-        left: 0px
-        width: 100%
-        height: 100%
-        overflow: hidden
+.page#home
+  background-color: $yellow
 
-    // TODO: how to structure?
-    .page#home
-      background-color: $yellow
-      display: block
+// -----------------------------------------------
+// About styles
+// -----------------------------------------------
+
+.page#about
+  background-color: $blue
+
+// -----------------------------------------------
+// Work styles
+// -----------------------------------------------
+
+.page#work
+  background-color: rgb(3,171,140)
