--- a/src/styles/_slides.sass
+++ b/src/styles/_slides.sass
@@ -6,6 +6,14 @@
   height: 100%
   overflow: hidden
 
+  .slide-inner
+    position: absolute
+    top: 0px
+    left: 0px
+    width: 100%
+    height: 100%
+    overflow: hidden
+
 // -----------------------------------------------
 // Featured work slide
 // -----------------------------------------------
@@ -36,9 +44,8 @@
   .title-zone
     position: absolute
     top: 50%
-    left: 7%
-    right: 50%
-    cursor: pointer
+    left: 100px
+    right: 100px
 
     transform: translate(0,-50%)
 
@@ -47,7 +54,6 @@
       width: 100%
       height: 210px
       overflow: hidden
-      cursor: pointer
     
       .line-holder
         position: absolute
@@ -65,9 +71,10 @@
 
         h2
           position: relative
-          width: 100%
           height: 100%
           overflow: hidden
+          display: inline-block
+          cursor: pointer
 
           span
             position: relative
@@ -105,7 +112,7 @@
         font-family: $inconsolata
         font-size: 14px
         line-height: 76px
-        font-weight: $bold
+        letter-spacing: 1px
         cursor: pointer
 
         &:first-child
@@ -155,17 +162,14 @@
 
   .meta-zone
     position: absolute
-    bottom: 6%
-    left: 7%
-    right: 50%
+    bottom: 40px
+    left: 100px
+    right: 100px
 
     ul
       float: left
       position: relative
-      width: 24%
-      min-width: 234px
-      font-size: 0
-      line-height: 0
+      width: 234px
 
       &:before
         content: 'Client(s)'
@@ -177,11 +181,11 @@
         font-family: $inconsolata
         font-size: 9px
         line-height: 10px
-        font-weight: $bold
         letter-spacing: 1px
         text-transform: uppercase
+        display: block
 
-        transform: rotate(-90deg)
+        transform: rotate(-90deg) translate3d(0,0,0)
         transform-origin: bottom left
 
       &.mediums:before
@@ -208,3 +212,117 @@
       &:last-child
         li:last-child
           width: 13px
+
+  // ---------------------------------------------
+  // Detail zone
+  // ---------------------------------------------
+
+  .detail-zone
+    position: absolute
+    top: 0px
+    left: 50%
+    width: 50%
+    height: 100%
+    overflow: hidden
+    display: none
+
+    .cell
+      position: absolute
+      top: 0px
+      left: 0px
+      width: 100%
+      overflow: hidden
+
+      &.video-cell
+        height: 0
+        padding: 0 0 56.25%
+        background-color: #028169
+
+        iframe,
+        .video-poster
+          position: absolute
+          top: -1px
+          left: -1px
+          right: -1px
+          bottom: -1px
+          overflow: hidden
+
+        .video-poster
+          background-image: url('/images/work/poster.jpg')
+          background-repeat: no-repeat
+          background-position: center center
+          background-size: cover
+          cursor: pointer
+
+          span
+            position: absolute
+            top: 50%
+            left: 50%
+            height: 30px
+            padding: 60px 0 0
+            color: $white
+            font-size: 14px
+            line-height: 30px
+
+            transform: translate(-50%,-50%)
+
+            &:before
+              content: ''
+              position: absolute
+              top: 0px
+              left: 50%
+              width: 0
+              height: 0
+              margin: 0 0 0 -20px
+              border-top: 25px solid transparent
+              border-bottom: 25px solid transparent
+              border-left: 40px solid $white
+
+            &:after
+              content: ''
+              position: absolute
+              bottom: 0px
+              left: 0px
+              width: 100%
+              height: 3px
+              background-color: $white
+
+      &.summary-cell
+        margin: 56.25% 0 0
+        bottom: 0px
+        background-color: $black
+
+      .cell-inner
+        position: absolute
+        top: 50px
+        left: 50px
+        right: 50px
+        bottom: 40px
+
+        h3, p
+          color: $white
+          font-family: $inconsolata
+          font-size: 14px
+          line-height: 24px
+          font-weight: $bold
+
+        p
+          color: $gray
+          font-weight: $regular
+
+        .services
+          position: absolute
+          bottom: 0px
+          left: 0px
+          color: $gray
+          font-family: $inconsolata
+          font-size: 10px
+          line-height: 12px
+          font-weight: $bold
+          letter-spacing: 1px
+          text-transform: uppercase
+
+          &:before
+            content: 'Services Provided'
+            color: $white
+            display: block
