--- a/src/styles/_pages.sass
+++ b/src/styles/_pages.sass
@@ -31,6 +31,21 @@
     height: 100%
     overflow: hidden
 
+.slide
+  position: absolute
+  top: 0px
+  left: 0px
+  width: 100%
+  height: 100%
+
+  .slide-inner
+    position: absolute
+    top: 0px
+    left: 0px
+    width: 100%
+    height: 100%
+    overflow: hidden
+
 // -----------------------------------------------
 // Home styles
 // -----------------------------------------------
