--- a/src/styles/app.sass
+++ b/src/styles/app.sass
@@ -8,5 +8,5 @@
 @import "src/styles/fallback"
 @import "src/styles/header"
 @import "src/styles/pages"
-@import "src/styles/slides"
 @import "src/styles/transition"
+@import "src/styles/slides/featured-work"
