--- a/src/styles/_pages.sass
+++ b/src/styles/_pages.sass
@@ -20,7 +20,6 @@
   left: 0px
   width: 100%
   height: 100%
-  overflow: hidden
   display: none
 
   .page-inner
@@ -29,7 +28,21 @@
     left: 0px
     width: 100%
     height: 100%
-    overflow: hidden
+
+    .slides-wrapper
+      position: absolute
+      top: 0px
+      left: 0px
+      width: 100%
+      height: 100%
+      overflow: hidden
+
+    .page-nav
+      position: absolute
+      top: 50%
+      right: 0px
+      width: 40px
+      transform: translate(0%, -50%)
 
 // -----------------------------------------------
 // Home styles
