--- a/src/styles/_header.sass
+++ b/src/styles/_header.sass
@@ -41,12 +41,11 @@ header
       margin: 0 10px
       padding: 0 10px 14px
       color: $black
-      font-size: 14px
-      line-height: 24px
-      font-weight: $bold
       text-transform: capitalize
       display: inline-block
       cursor: pointer
+
+      @include type(24px, $bold)
 
       span
         position: absolute
