--- a/src/styles/_main.sass
+++ b/src/styles/_main.sass
@@ -4,15 +4,15 @@ html, body
   overflow: hidden
 
 body
-  background-color: $white
-  font-family: $montserrat
-  font-weight: $regular
+  color: $white
+  @include type(24px, $regular)
 
   -webkit-font-smoothing: antialiased
   -webkit-tap-highlight-color: rgba(0,0,0,0)
   -webkit-text-size-adjust: none
 
 a
+  color: $white
   text-decoration: none
   outline: none
 
