--- a/src/styles/_pages.sass
+++ b/src/styles/_pages.sass
@@ -37,12 +37,36 @@
       height: 100%
       overflow: hidden
 
-    .page-nav
+    .page-nav-wrapper
       position: absolute
-      top: 50%
+      top: 0px
       right: 0px
       width: 40px
-      transform: translate(0%, -50%)
+      height: 100%
+      background-color: rgba(0, 0, 0, 0.06)
+
+      .page-nav
+        position: absolute
+        top: 50%
+        right: 0px
+        width: 40px
+        transform: translate(0%, -50%)
+
+        li
+          display: block
+          width: 100%
+          height: 40px
+
+          a
+            display: block
+            width: 100%
+            height: 100%
+            text-align: center
+            font: normal normal normal 12px/40px $montserrat
+            color: #fff
+
+          a:hover, a.active
+            background-color: #000
 
 .slide
   position: absolute
@@ -50,6 +74,7 @@
   left: 0px
   width: 100%
   height: 100%
+  display: none
 
   .slide-inner
     position: absolute
