--- a/src/styles/slides/_featured-work.sass
+++ b/src/styles/slides/_featured-work.sass
@@ -211,97 +211,104 @@
       left: 50%
       width: 50%
       height: 100%
-      overflow: hidden
-      display: block
+      display: none
 
-      .cell
+      .detail-zone-inner
         position: absolute
         top: 0px
         left: 0px
-        width: 100%
+        right: 40px
+        bottom: 0px
         overflow: hidden
 
-        &.video-cell
-          height: 0
-          padding: 0 0 56.25%
-          background-color: #028169
+        .cell
+          position: absolute
+          top: 0px
+          left: 0px
+          width: 100%
+          overflow: hidden
 
-          iframe,
-          .video-poster
-            position: absolute
-            top: -1px
-            left: -1px
-            right: -1px
-            bottom: -1px
-            overflow: hidden
+          &.video-cell
+            height: 0
+            padding: 0 0 56.25%
+            background-color: #028169
 
-          .video-poster
-            background-image: url('/images/work/poster.jpg')
-            background-repeat: no-repeat
-            background-position: center center
-            background-size: cover
-            cursor: pointer
-
-            span
+            iframe,
+            .video-poster
               position: absolute
-              top: 50%
-              left: 50%
-              height: 30px
-              padding: 60px 0 0
+              top: -1px
+              left: -1px
+              right: -1px
+              bottom: -1px
+              overflow: hidden
 
-              @include type(30px, $regular)
+            .video-poster
+              background-image: url('/images/work/poster.jpg')
+              background-repeat: no-repeat
+              background-position: center center
+              background-size: cover
+              cursor: pointer
 
-              transform: translate(-50%,-50%)
+              span
+                position: absolute
+                top: 50%
+                left: 50%
+                height: 30px
+                padding: 60px 0 0
+
+                @include type(30px, $regular)
+
+                transform: translate(-50%,-50%)
+
+                &:before
+                  content: ''
+                  position: absolute
+                  top: 0px
+                  left: 50%
+                  width: 0
+                  height: 0
+                  margin: 0 0 0 -20px
+                  border-top: 25px solid transparent
+                  border-bottom: 25px solid transparent
+                  border-left: 40px solid $white
+
+                &:after
+                  content: ''
+                  position: absolute
+                  bottom: 0px
+                  left: 0px
+                  width: 100%
+                  height: 3px
+                  background-color: $white
+
+          &.summary-cell
+            margin: 56.25% 0 0
+            bottom: 0px
+            background-color: $black
+
+          .cell-inner
+            position: absolute
+            top: 50px
+            left: 50px
+            right: 50px
+            bottom: 40px
+
+            h3
+              @include type-mono(24px, $bold)
+
+            p
+              color: $gray
+              @include type-mono(24px, $bold)
+
+            .services
+              position: absolute
+              bottom: 0px
+              left: 0px
+              color: $gray
+
+              @include type-mono-small
 
               &:before
-                content: ''
-                position: absolute
-                top: 0px
-                left: 50%
-                width: 0
-                height: 0
-                margin: 0 0 0 -20px
-                border-top: 25px solid transparent
-                border-bottom: 25px solid transparent
-                border-left: 40px solid $white
-
-              &:after
-                content: ''
-                position: absolute
-                bottom: 0px
-                left: 0px
-                width: 100%
-                height: 3px
-                background-color: $white
-
-        &.summary-cell
-          margin: 56.25% 0 0
-          bottom: 0px
-          background-color: $black
-
-        .cell-inner
-          position: absolute
-          top: 50px
-          left: 50px
-          right: 50px
-          bottom: 40px
-
-          h3
-            @include type-mono(24px, $bold)
-
-          p
-            color: $gray
-            @include type-mono(24px, $bold)
-
-          .services
-            position: absolute
-            bottom: 0px
-            left: 0px
-            color: $gray
-
-            @include type-mono-small
-
-            &:before
-              content: 'Services Provided'
-              color: $white
-              display: block
+                content: 'Services Provided'
+                color: $white
+                display: block
