power commit: appending the appendix

--- a/src/styles/app.sass
+++ b/src/styles/app.sass
@@ -10,3 +10,4 @@
 @import "src/styles/pages"
 @import "src/styles/transition"
 @import "src/styles/slides/featured-work"
+@import "src/styles/slides/appendixed-work"
