--- a/src/styles/slides/_featured-work.sass
+++ b/src/styles/slides/_featured-work.sass
@@ -14,17 +14,16 @@
     overflow: hidden
   
     // ---------------------------------------------
-    // Image zone
+    // Picture zone
     // ---------------------------------------------
 
-    .image-zone
+    .picture-zone
       position: absolute
       top: 0px
       left: 50%
       width: 100%
       height: 100%
       background-color: rgb(3,171,140)
-      background-image: url('/images/work/boxtrolls.jpg')
       background-repeat: no-repeat
       background-position: left bottom
       background-size: contain
@@ -114,6 +113,7 @@
           .copy
             float: left
             position: relative
+            text-transform: capitalize
 
           .icon
             float: left
@@ -231,7 +231,6 @@
           &.video-cell
             height: 0
             padding: 0 0 56.25%
-            background-color: #028169
 
             iframe,
             .video-poster
@@ -243,7 +242,6 @@
               overflow: hidden
 
             .video-poster
-              background-image: url('/images/work/poster.jpg')
               background-repeat: no-repeat
               background-position: center center
               background-size: cover
