power commit: setup mvc for about process slide types

--- a/src/styles/app.sass
+++ b/src/styles/app.sass
@@ -9,5 +9,6 @@
 @import "src/styles/header"
 @import "src/styles/pages"
 @import "src/styles/transition"
+@import "src/styles/slides/about-process"
 @import "src/styles/slides/featured-work"
 @import "src/styles/slides/appendixed-work"
