--- a/src/styles/slides/_about-process.sass
+++ b/src/styles/slides/_about-process.sass
@@ -17,7 +17,9 @@
       position: absolute
       top: 50%
       left: 100px
-      font-size: 132px
-      line-height: 100px
+      font-size: 66px
+      line-height: 56px
+      font-weight: $bold
+      text-transform: uppercase
 
       transform: translate(0, -50%)
