power commit: add about video slide type and mvc

--- a/src/styles/app.sass
+++ b/src/styles/app.sass
@@ -10,5 +10,6 @@
 @import "src/styles/pages"
 @import "src/styles/transition"
 @import "src/styles/slides/about-process"
+@import "src/styles/slides/about-video"
 @import "src/styles/slides/featured-work"
 @import "src/styles/slides/appendixed-work"
