--- a/src/styles/app.sass
+++ b/src/styles/app.sass
@@ -9,7 +9,9 @@
 @import "src/styles/header"
 @import "src/styles/pages"
 @import "src/styles/transition"
+@import "src/styles/slides/about"
 @import "src/styles/slides/about-process"
 @import "src/styles/slides/about-video"
+@import "src/styles/slides/work"
 @import "src/styles/slides/featured-work"
 @import "src/styles/slides/appendixed-work"
