--- a/src/styles/_pages.sass
+++ b/src/styles/_pages.sass
@@ -67,9 +67,36 @@
             text-align: center
             display: block
 
-          a:hover,
+            span:last-child
+              position: absolute
+              top: 0px
+              left: 0px
+              width: 100%
+              height: 100%
+              
+
+            span:first-child
+              position: absolute
+              top: 0px
+              right: 0px
+              height: 100%
+              padding: 0 60px 0 20px
+              color: $black
+              background-color: $white
+              white-space: nowrap
+
+              transform: translate3d(100%,0,0)
+
+          a:hover
+            span:first-child
+              transform: translate3d(0%,0,0)
+
+            span:last-child
+              background-color: $black
+
           a.active
-            background-color: $black
+            span:last-child
+              background-color: $black
 
 // -----------------------------------------------
 // Home styles
