base slide stylesheet

--- a/src/styles/app.sass
+++ b/src/styles/app.sass
@@ -9,6 +9,7 @@
 @import "src/styles/header"
 @import "src/styles/pages"
 @import "src/styles/transition"
+@import "src/styles/slides/slide"
 @import "src/styles/slides/about"
 @import "src/styles/slides/about-process"
 @import "src/styles/slides/about-video"
