--- a/src/styles/slides/_about-process.sass
+++ b/src/styles/slides/_about-process.sass
@@ -1,25 +1,16 @@
 .slide.about-process
-  position: absolute
-  top: 0px
-  left: 0px
-  width: 100%
-  height: 100%
+  
+  // ---------------------------------------------
+  // Temp H2
+  // ---------------------------------------------
 
-  .slide-inner
+  h2
     position: absolute
-    top: 0px
-    left: 0px
-    width: 100%
-    height: 100%
-    overflow: hidden
+    top: 50%
+    left: 100px
+    font-size: 66px
+    line-height: 56px
+    font-weight: $bold
+    text-transform: uppercase
 
-    h2
-      position: absolute
-      top: 50%
-      left: 100px
-      font-size: 66px
-      line-height: 56px
-      font-weight: $bold
-      text-transform: uppercase
-
-      transform: translate(0, -50%)
+    transform: translate(0, -50%)
