--- a/src/styles/slides/_about-video.sass
+++ b/src/styles/slides/_about-video.sass
@@ -1,25 +1,16 @@
 .slide.about-video
-  position: absolute
-  top: 0px
-  left: 0px
-  width: 100%
-  height: 100%
+    
+  // ---------------------------------------------
+  // Poster
+  // ---------------------------------------------
 
-  .slide-inner
+  .poster
     position: absolute
     top: 0px
     left: 0px
-    width: 100%
-    height: 100%
+    right: 40px
+    bottom: 0px
+    background-repeat: no-repeat
+    background-position: center center
+    background-size: cover
     overflow: hidden
-
-    .poster
-      position: absolute
-      top: 0px
-      left: 0px
-      right: 40px
-      bottom: 0px
-      background-repeat: no-repeat
-      background-position: center center
-      background-size: cover
-      overflow: hidden
