title transition styles

--- a/src/styles/slides/_featured-work.sass
+++ b/src/styles/slides/_featured-work.sass
@@ -41,8 +41,6 @@
         width: 100%
         height: 90px
         overflow: hidden
-        
-        transform: translate3d(0,0%,0)
 
         &:last-child
           top: auto
@@ -54,6 +52,12 @@
           overflow: hidden
           display: inline-block
           cursor: pointer
+
+          transform: translate3d(0,0%,0)
+          transition: transform $speed $evil_ease
+
+          &.no-trans
+            transition: transform 0ms linear
 
           span
             position: relative
