Page transition setup.

--- a/src/styles/_pages.sass
+++ b/src/styles/_pages.sass
@@ -101,20 +101,31 @@
 // -----------------------------------------------
 // Home styles
 // -----------------------------------------------
-
 .page#home
   background-color: $yellow
 
 // -----------------------------------------------
 // About styles
 // -----------------------------------------------
-
 .page#about
   background-color: $blue
 
 // -----------------------------------------------
 // Work styles
 // -----------------------------------------------
-
 .page#work
   background-color: $blue
+
+// -----------------------------------------------
+// Transish
+// -----------------------------------------------
+#pages-transition
+  position: absolute
+  top: 0px
+  left: 0px
+  width: 100%
+  height: 100%
+
+  canvas
+    width: 100%
+    height: 100%
