wip: transition in/out for featured and landing work

--- a/src/styles/slides/_featured-work.sass
+++ b/src/styles/slides/_featured-work.sass
@@ -54,7 +54,7 @@
           cursor: pointer
 
           transform: translate3d(0,0%,0)
-          transition: transform $speed $evil_ease
+          transition: transform $speed linear
 
           &.no-trans
             transition: transform 0ms linear
