--- a/src/styles/slides/_featured-work.sass
+++ b/src/styles/slides/_featured-work.sass
@@ -13,7 +13,6 @@
     background-repeat: no-repeat
     background-position: left bottom
     background-size: contain
-    background-blend-mode: multiply
     overflow: hidden
   
   // ---------------------------------------------
@@ -54,7 +53,7 @@
           cursor: pointer
 
           transform: translate3d(0,0%,0)
-          transition: transform $speed linear
+          transition: transform $speed $evil_ease
 
           &.no-trans
             transition: transform 0ms linear
