--- a/src/styles/slides/_work.sass
+++ b/src/styles/slides/_work.sass
@@ -55,7 +55,7 @@
           cursor: default
 
           transform: translate3d(0,0%,0)
-          transition: transform $speed linear
+          transition: transform $speed $evil_ease
 
           &.no-trans
             transition: transform 0ms linear
