--- a/src/styles/_pages.sass
+++ b/src/styles/_pages.sass
@@ -20,7 +20,10 @@
   left: 0px
   width: 100%
   height: 100%
+  background-color: rgb(102,102,102)
   display: none
+
+  transition: background-color $speed linear
 
   .page-inner
     position: absolute
@@ -102,19 +105,19 @@
 // Home styles
 // -----------------------------------------------
 .page#home
-  background-color: $yellow
-
+  background-color: rgb(255,242,0)
+ 
 // -----------------------------------------------
 // About styles
 // -----------------------------------------------
 .page#about
-  background-color: $blue
-
+  background-color: rgb(0,174,239)
+ 
 // -----------------------------------------------
 // Work styles
 // -----------------------------------------------
 .page#work
-  background-color: $blue
+  background-color: rgb(0,174,239)
 
 // -----------------------------------------------
 // Transish
