--- a/src/styles/_pages.sass
+++ b/src/styles/_pages.sass
@@ -23,7 +23,7 @@
   background-color: rgb(102,102,102)
   display: none
 
-  transition: background-color $speed linear
+  transition: background-color $speed_metal $evil_ease
 
   .page-inner
     position: absolute
