--- a/src/styles/_pages.sass
+++ b/src/styles/_pages.sass
@@ -76,7 +76,9 @@
               left: 0px
               width: 100%
               height: 100%
-              
+              background-color: transparent
+
+              transition: background-color $speed linear $speed
 
             span:first-child
               position: absolute
@@ -89,17 +91,23 @@
               white-space: nowrap
 
               transform: translate3d(100%,0,0)
+              transition: transform $speed $evil_ease
 
           a:hover
             span:first-child
               transform: translate3d(0%,0,0)
+              transition: transform $speed $evil_ease $speed
 
             span:last-child
               background-color: $black
+              
+              transition: background-color $speed linear
 
           a.active
             span:last-child
               background-color: $black
+
+              transition: background-color 0ms linear
 
 // -----------------------------------------------
 // Home styles
