--- a/src/styles/slides/_featured-work.sass
+++ b/src/styles/slides/_featured-work.sass
@@ -179,16 +179,18 @@
         &:first-child
           margin: 0 14px 0 22px
 
-        a
-          position: absolute
-          top: 0px
-          left: 0px
-          width: 100%
-          height: 100%
-
       &:last-child
         li:last-child
           width: 13px
+
+  // ---------------------------------------------
+  // Zones that will fade in/out
+  // ---------------------------------------------
+
+  .zone
+    opacity: 0
+
+    transition: opacity $speed $ease
 
   // ---------------------------------------------
   // Detail zone
