--- a/src/styles/_pages.sass
+++ b/src/styles/_pages.sass
@@ -5,7 +5,6 @@
   right: 0px
   bottom: 0px
   background-color: $light_gray
-  overflow: hidden
 
 #pages-inner
   position: absolute
@@ -13,6 +12,7 @@
   left: 0px
   width: 100%
   height: 100%
+  overflow: hidden
 
 .page
   position: absolute
@@ -21,6 +21,7 @@
   width: 100%
   height: 100%
   background-color: rgb(102,102,102)
+  overflow: hidden
   display: none
 
   transition: background-color $speed_metal $evil_ease
@@ -130,13 +131,35 @@
 // -----------------------------------------------
 // Transish
 // -----------------------------------------------
+.page.out-left, .page.out-right
+  transition: transform 666ms $evil_ease
+  z-index: 1
+
+.page.out-left
+  transform: translate3d(-100%, 0, 0)
+
+.page.out-right
+  transform: translate3d(100%, 0, 0)
+
 #pages-transition
   position: absolute
   top: 0px
   left: 0px
   width: 100%
   height: 100%
+  overflow: hidden
 
   canvas
     width: 100%
     height: 100%
+
+#pages-transition.out-left, #pages-transition.out-right
+  transition: width 666ms $evil_ease
+
+#pages-transition.out-left
+  width: 0%
+
+#pages-transition.out-right
+  right: 0px
+  left: auto
+  width: 0%
