adding a few styles i forgot

--- a/src/styles/slides/_slide.sass
+++ b/src/styles/slides/_slide.sass
@@ -63,7 +63,7 @@
             transition: transform $speed cubic-bezier(0.215, 0.610, 0.355, 1.000)
 
           &.trans-out
-            transition: transform $speed cubic-bezier(0.215, 0.610, 0.355, 1.000)
+            transition: transform $speed cubic-bezier(0.550, 0.055, 0.675, 0.190)
 
           &.trans-out.top
             transform: translate3d(0,100%,0)
@@ -98,6 +98,11 @@
     bottom: 40px
     left: 100px
     right: 100px
+
+    ul
+      float: left
+      position: relative
+      width: 234px
 
   // ---------------------------------------------
   // Zones that will fade in/out
